<resources>
    <string name="app_name">MedApp</string>
    <string name="open_navigation">Open</string>
    <string name="close_navigation">Close</string>
    <string name="medicine">Medicine</string>
    <string name="book">Books</string>
    <string name="download">download</string>
    <string name="share">share</string>
    <string name="medsystem">MedSystem</string>
    <string name="title">Title</string>
    <string name="submit_article">submit article</string>
    <string name="article">Write An Article</string>
    <string name="author">Author Name</string>
    <string name="profile">Profile</string>
    <string name="phoneNo">Phone No</string>
    <string name="password">password</string>
    <string name="confirm_Password">confirm password</string>
    <string name="emailAddress">email address</string>
    <string name="guest">Guest</string>
    <string name="enterName">Enter Medicine Name</string>
    <string name="enterPrice">Enter Price</string>
    <string name="enterCategory">Enter Category</string>
    <string name="insert">Insert</string>
    <string name="title_Text_article">title Text</string>
    <string name="no_of_article">No Of Article</string>
    <string name="count">Count</string>
    <string name="publish">publish</string>
    <string name="details">details</string>
    <string name="editor">Editor</string>
    <string name="bio">Few lines about you...</string>
    <string name="Register">Register</string>
    <string name="UserName">UserName</string>
    <string name="logout">Logout</string>
    <string name="sample_text">     Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
      </string>
    <string name="Account">Account</string>

    <string name="section">

        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.


    </string>
</resources>
