<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"

    tools:context="com.example.regis.medsystem.VolleyExample">

    <TextView
        android:id="@+id/title_volley"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/app_name"
        android:textColor="#d92d2d"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/input"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_below="@+id/title_volley"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"


        android:textColorHint="#d92d2d"
        android:gravity="center"
        android:hint="@string/UserName"

        android:textSize="20sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="320dp"
        android:inputType="textPassword"
        android:layout_height="60dp"
        android:layout_below="@+id/input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:hint="@string/password"

        android:textColorHint="#d92d2d"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:textColorHint="#d92d2d"
        android:gravity="center"
        android:hint="@string/confirm_Password"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:textColorHint="#d92d2d"
        android:layout_below="@+id/confirmPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:hint="@string/emailAddress"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/phoneNo"
        android:layout_width="320dp"
        android:textColorHint="#d92d2d"
        android:layout_height="60dp"
        android:layout_below="@+id/emailAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:hint="@string/phoneNo"
        android:inputType="phone"
        android:maxLength="10"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/bio"
        android:hint="@string/bio"
        android:gravity="top|center"
        android:textColorHint="#d92d2d"
        android:inputType="text"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/phoneNo"
        android:layout_width="320dp"
        android:layout_height="100dp" />


    <Button
        android:id="@+id/register"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#82001a"
        android:text="@string/Register"
        android:textColor="#f4eeee"
        android:textSize="18sp" />


</RelativeLayout>
