<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeArticle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.regis.medsystem.ArticleDemo">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbarArticle"
            layout="@layout/toolbar" />

    </android.support.design.widget.AppBarLayout>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="138dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="54dp"
        android:text=""
        android:textColor="#d21074"
        android:textSize="22sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/authorArticleWrapper"
        android:layout_width="match_parent"
        android:layout_below="@+id/textView"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:hint="@string/title"
            android:id="@+id/articleTitle"
        android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/authorAuthorWrapper"
        android:layout_width="match_parent"
        android:layout_below="@+id/authorArticleWrapper"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:hint="@string/author"
            android:id="@+id/articleAuthorName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/authorContentWrapper"
        android:layout_width="match_parent"
        android:layout_below="@+id/authorAuthorWrapper"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:hint="@string/article"
            android:id="@+id/articleAuthorContent"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:inputType="textMultiLine" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/submitArticle"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/authorContentWrapper"
        android:layout_marginBottom="105dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:text="@string/publish"
        android:textColor="#f5f2f2" />
</RelativeLayout>
