<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.regis.medsystem.research.ArticleContent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarlayoutContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_below="@+id/appbarlayoutContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleTextContent"
                android:text="@string/title_Text_article"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/authorTextContent"
                android:layout_below="@+id/titleTextContent"
                android:text="@string/author"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/contentTextContent"
                android:layout_below="@+id/authorTextContent"
                android:text="@string/article"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>
