<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.regis.medsystem.Login"
    android:padding="10dp">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar_login"
            layout="@layout/toolbar"


            />
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_below="@+id/appbarLogin"
        android:id="@+id/mainTitle"
        android:text="@string/medsystem"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/layoutUsername"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/mainTitle">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/usernameLogin"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:inputType="phone"
            android:textColorHint="@color/colorAccent"
            android:hint="@string/phoneNo" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordogin"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/colorAccent" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/login"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_below="@+id/layoutPassword"
        android:layout_alignEnd="@+id/appbarLogin"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorPrimary"
        android:text="Login"
        android:textColor="#ffff"
        android:textSize="18sp"
        android:layout_alignRight="@+id/appbarLogin"
        android:layout_marginRight="20dp" />

</RelativeLayout>
